--- a/templates/leissp.html
+++ b/templates/leissp.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Página Inicial</title>
+    <title> Novas leis de São Paulo</title>
     <style>
         /* Reset CSS básico */
         * {
@@ -11,7 +11,6 @@
             box-sizing: border-box;
         }
 
-        /* Estilos personalizados para o seu portfólio */
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
@@ -52,38 +51,16 @@
             padding: 20px;
         }
 
-        .bio {
-            margin-bottom: 10px;
-        }
-
-        .bio p {
-            text-align: left; /* Alinha o texto da biografia à esquerda */
-        }
-
-        .experiencias {
+        .leiss {
             margin-top: 40px;
         }
 
-        .experiencias h3 {
+        .leis h3 {
             margin-bottom: 10px;
         }
 
-        .experiencias ul {
-            margin-top: 20px; /* Adiciona margem acima da lista de experiências */
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        .qualificacao {
-            margin-bottom: 20px; /* Adicionado espaçamento entre a seção de "Qualificação" e a foto */
-        }
-
-        .qualificacao ul {
-            margin-top: 20px;
+        .leis ul {
+            margin-top: 20px; /* Adiciona margem acima */
             list-style-type: none;
             padding: 0;
         }
@@ -115,29 +92,20 @@
 </div>
 <!-- Conteúdo envolvido em uma div com classe container -->
 <div class="container">
-    <div class="bio">
-        <h2>Sobre</h2>
-        <p>Sou jornalista e atuo como repórter de ciência e tecnologia no Terra. Antes, colaborei com Agência Estado, Money Times e Suno Notícias. Tenho experiência na cobertura de mercados, economia, política, ciência e tecnologia.</p>
-        <img src="https://media.licdn.com/dms/image/C4D03AQG2knNr3SNbxQ/profile-displayphoto-shrink_800_800/0/1655394259309?e=1717027200&v=beta&t=LlDxhg-oLaRxRqnMvzAf2VqMS1-uRv9Wc1XxIjtncIA" alt="Foto Laura Intrieri" width="300">
-    </div>
-    <div class="qualificacao">
-        <h2>Qualificação</h2>
-        <ul>
-            <li>2023 a 2024 - Master em Jornalismo de Dados e Automação | Insper.</li>
-            <li>2018 a 2022 - Bacharelado em Administração Pública | FGV.</li>
-        </ul>
+    
+    <div class="leis">
+        <h2>Leis de São Paulo</h2>
+        <p>Confira abaixo tabelas com todas as leis que foram sancionadas até o momento pelo governo de São Paulo e pela prefeitura da capital:</p>
+        <!-- Tabela 1 -->
+        <h3>Leis municipais sancionadas em 2024 até o momento:</h3>
+        {{ tabela1_html | safe }}
+        <br></br>
+        <!-- Tabela 2 -->
+        <h3>Leis estaduais sancionadas em 2024 até o momento:</h3>
+        {{ tabela2_html | safe }}
     </div>
 
-    <div class="experiencias">
-        <h2>Experiências</h2>
-        <ul>
-            <li>Repórter de ciência e tecnologia | Terra <b>outubro de 2022 - atualmente </b></li>
-            <li>Freelancer na cobertura de balanços | Agência Estado <b>julho de 2022 a agosto de 2022</b> </li>
-            <li>Repórter | Suno Notícias <b> agosto de 2022 a outubro de 2022</b></li>
-            <li>Estagiária de jornalismo | Money Times <b>dezembro de 2021 a junho de 2022</b></li>
-            <li>Repórter | Gazeta Vargas <b>julho de 2020 a janeiro de 2022</b></li>
-        </ul>
-    </div>
+
     
 <footer>
     <p>&copy; 2024 Laura Intrieri</p>
